infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: 
    - host: microservices-blog.com
      http:
        paths: 
          - path: /posts/create
            backend: 
              serviceName: posts-service-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend: 
              serviceName: query-service-clusterip-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend: 
              serviceName: comments-service-clusterip-srv
              servicePort: 4001
          - path: /?(.*)
            backend: 
              serviceName: client-clusterip-srv
              servicePort: 3000
